Complete jvmapp demo
- create build script for java 9 module
- create build steps for running java 9 module